# auditable

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
assets/figure-src/: analyze_run_mockup.html
docs/: api.md  architecture.md  audit-report.md  index.md  lifecycle.md  post-analysis.md  post-examples.md  pre-coverage.md  pre-examples.md  pre-rules.md  quickstart.md  realtime-examples.md  realtime-replay.md  requirements.txt
examples/: README.md  analyze_plan.py  analyze_run.py  audit_report.py  end_to_end.py  example_audit_report.py  example_end_to_end.py  example_langgraph_capture.py  example_langgraph_live_replay.py  example_langgraph_llm_agent.py  example_live_monitor.py  example_live_replay.py  example_payment_audit.py  example_post_rank_run.py  example_pre_lint_plan.py  example_standalone_report.py  example_touch_capture.py  payment_audit.py  standalone_report.py
experiment/: agent_failure_detection.py  agent_failure_localization.py  agent_graph_characterization.py  agent_graph_swe_agent.py  agent_graph_swebench_crossfile.py  agent_graph_tau_bench.py  data_state_anomaly.py  explore_creditcard.py  replay_vs_baseline.py
figure-src/: lifecycle.py
src/auditable/: __init__.py  _report_figures.py  analysis.py  audit_report.py  chain.py  compound.py  core.py  gate.py  record.py  report.py  signals.py
src/auditable/data/: __init__.py
src/auditable/graph/: __init__.py  features.py  grounding.py  loader.py  pre.py  risk.py  session.py  touch.py
src/auditable/graph/adapters/: __init__.py  declared_plan.py  own_record.py  protocol.py  tau_bench.py
src/auditable/harness/: __init__.py
src/auditable/integrations/: __init__.py  langgraph.py
src/auditable/model/: __init__.py
tests/: test_adapters.py  test_analysis.py  test_audit_report.py  test_auditors.py  test_basic.py  test_compound.py  test_data_module.py  test_gate.py  test_graph.py  test_graph_execution_reach.py  test_graph_features.py  test_graph_loader.py  test_graph_risk.py  test_grounding.py  test_langgraph_integration.py  test_langgraph_replay_bridge.py  test_live_session.py  test_pre.py  test_pre_coverage.py  test_public_api.py  test_replay.py  test_report.py  test_session_graph.py  test_session_graph_projection.py  test_signals.py  test_sink.py  test_touch.py  test_touch_replay_bridge.py
