[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditable"
version = "0.1.1"
description = "Audit any agent decision across its past, present, and future, on one typed graph."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Yue Zhao", email = "yzhao010@usc.edu" }]
keywords = [
    "ai-agents", "agent", "audit", "auditing", "replay", "ai-safety",
    "ai-risk", "llm", "anomaly-detection", "observability", "compliance",
    "agent-reliability", "trustworthy-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
graph = ["networkx>=3.0"]
langchain = ["langchain-core>=0.3.0"]
# Capture a real LangGraph run into the typed graph (auditable.integrations.langgraph).
# Pulls NetworkX too, since capture feeds analyze_run. langgraph 1.x needs Python
# >= 3.10, so the marker guards install on 3.9. Tested against langgraph 1.2.x.
langgraph = ["langgraph>=1.0; python_version >= '3.10'", "networkx>=3.0"]
# The human-facing audit-report PDF: pure-Python PDF writer (fpdf2) plus the chart
# stack (matplotlib headless Agg + networkx). No system libraries, so a pip-only
# install works on Windows and Linux. The agent-facing Markdown needs none of this.
report = ["fpdf2>=2.7", "matplotlib>=3.5", "networkx>=3.0"]
# The real-LLM agent example (examples/example_langgraph_llm_agent.py) needs an
# OpenAI-compatible client. The example uses only the stable chat.completions API,
# which the 1.x and 2.x lines share, so the floor is openai>=1.0. The example
# imports openai lazily and skips when it (or a key) is absent, so this extra is
# optional even to run the example file.
llm = ["openai>=1.0"]
dev = ["pytest>=7.0", "build>=1.0", "twine>=5.0", "pyod>=1.1.0"]

[project.urls]
Homepage = "https://github.com/yzhao062/auditable"
Repository = "https://github.com/yzhao062/auditable"
Issues = "https://github.com/yzhao062/auditable/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auditable"]

# sdist ships an explicit allow-list. Without this, hatchling's sdist default
# bundles every VCS-tracked file, which would publish experiment/ (the private
# moat scripts). Keep this a whitelist so a new tracked dir is excluded by default.
[tool.hatch.build.targets.sdist]
include = [
    "src/auditable",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "examples",
    "tests",
]
